# reel-tui

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: app.rs  edit.rs  files.rs  main.rs  probe.rs  ui.rs
