[package]
name = "reel-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal media inspector powered by ffprobe"
license = "MIT"

[[bin]]
name = "reel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.30.2"
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
